<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="menu_array">
        <item>CityPedia</item>
        <item>CityTours</item>
        <item>Maps</item>
        <item>Details</item>
    </string-array>
    
    <string name="app_name">MobiTours</string>
    <string name="about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="zoneimg">Zone Image</string>
    <string name="init">Synchronization,Please wait..</string>
    <string name="cityimg">City Image</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="homeslide">icon</string>
    <string name="synchronizing">Synchronizing data with server</string>
    <string name="copyright">©mobilEx</string>
    <string name="Search">Search</string>
    <string name="login">Login</string>
    <string name="google_login_">Signing in with Google..</string>
    <string name="Pin">Pin</string>
    <string name="Maps">Maps</string>
    <string name="fgmap">Map</string>
    <string name="fglist">List</string>
    <string name="buttonlist">List</string>
    <string name="buttonmaps">Maps</string>
    <string name="str_btn_find">Go</string>
    <string name="hnt_et_location">Entrez la province</string>
    <string name="satellite">Satellite</string>
    <string name="traffic">Traffic</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="citylist">List</string>
    <string name="installGoogleMaps">Google Map initialisation</string>
    <string name="install">Installer</string>
    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Field</string>
    <string name="quit">Exit</string>
    <string name="str_rb_ville">Town</string>
    <string name="showmap">Show map</string>
    <string name="separ"> ; </string>
    <string name="btn_resto">Restaurants</string>
    <string name="btn_hotel">Hotels</string>
    <string name="btn_nature">Nature</string>
    <string name="btn_culture">Cultures</string>
    <string name="strtown">City of</string>
    <string name="strmorecategories">More categories</string>
    <string name="airport">Airports</string>
    <string name="bank">Banks</string>
    <string name="shopping">Shopping</string>
    <string name="gym">Gym</string>
    <string name="pharma">Pharmacies</string>
    <string name="travelagency">Travel Agencies</string>
    <string name="bookstore">Books Store</string>
    <string name="atm">ATM</string>
    <string name="hospital">Hospitals</string>
    <string name="station">Petrol Stations</string>
    <string name="liste">Liste</string>
    <string name="map">Map</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="commentid">Comment Id</string>
    <string name="comment">Comments</string>
    <string name="userid">User Id</string>
    <string name="pointofinterestid">Point Of Interest Id</string>
    <string name="idsite">Site Id</string>
    <string name="textcomment">your comments here :</string>
    <string name="ratingid">Rating Id</string>
    <string name="rating">Rate here :</string>
 	<string name="test1">POI id :</string>
  	<string name="test2">Nom :</string>
  	<string name="headerlistzone">GeoZone list Heading</string>
  	<string name="map_select_type_dialog">Map Type</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="title_map">Hotel map</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="advanced_poi_actions">Advanced Map</string>
    <string name="showmetheway">Go To</string>
    <string name="menu_comment">Comments</string>
    <string name="menu_rating">Rate</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_msg">Enter your message</string>
    <string name="sendsms">Send Sms</string>
    <string name="mailaddress">email address</string>
    <string name="subject">Subject</string>
    <string name="sendmail">Send Email</string>
    
    <string name="map_floorcontrol_1">1</string>
    <string name="map_floorcontrol_2">2</string>
    <string name="map_floorcontrol_3">3</string>
    
    <string name="radio1">1</string>
    <string name="radio2">2</string>
    <string name="radio3">3</string>
    <string name="radio4">4</string>
    <string name="radio5">5</string>
    
</resources>