<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
      <item
        android:id="@+id/menu_actions"
        android:title="@string/advanced_poi_actions"
         android:icon="@drawable/findme"   
         android:showAsAction="never"
    />
      <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        android:icon="@drawable/pointer"
        android:showAsAction="never"
        />
      <item
        android:id="@+id/menu_comment"
        android:title="@string/menu_comment"
        android:icon="@drawable/comments"
        android:showAsAction="never"
        />
      <item
        android:id="@+id/menu_rating"
        android:title="@string/menu_rating"
        android:icon="@drawable/rating"
        android:showAsAction="never"
        />
  
</menu>