<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:scrollbars="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
        android:orientation="vertical"
    	android:padding="10dp">
    
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone"        
        android:inputType="phone"
         />
    
    
	<EditText 
	    android:id="@+id/messageText"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:minHeight="140dp"
		android:hint="@string/enter_msg"
		/>
	
	<LinearLayout
	    style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
        android:orientation="horizontal"
    	android:padding="7dp">
	
		<Button
		    style="?android:attr/buttonBarButtonStyle"
		    android:id="@+id/ButtonSend" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/sendsms" />
		<Button
		    style="?android:attr/buttonBarButtonStyle"
		    android:id="@+id/ButtonCancel" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/cancel" />
	
	</LinearLayout>
	 
	</LinearLayout>
</ScrollView>
