<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/txttours"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#99000000"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/strtown"
        android:textIsSelectable="false" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >
        
        <!-- First Ligne --> 
        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/mapsbg" >         
	        
            <Button
                android:id="@+id/btn_resto"
                style="@style/citybutton"
                android:drawableTop="@drawable/ic_eat"
                android:text="@string/btn_resto" />	
                
              <Button
                android:id="@+id/btn_hotel"
                style="@style/citybutton"
                android:drawableTop="@drawable/ic_hotels"
                android:text="@string/btn_hotel" />	 
                
              <Button
                android:id="@+id/btn_nature"
                style="@style/citybutton"
                android:drawableTop="@drawable/ic_wildlife"
                android:text="@string/btn_nature" />	
                
              <Button
                android:id="@+id/btn_culture"
                style="@style/citybutton"
                android:drawableTop="@drawable/ic_cultures"
                android:text="@string/btn_culture" />	 
	       
		</LinearLayout>
		<!-- Here the second part of the layout  -->
		<TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="#FFFFFF"
	        android:textColor="#000000"
	        android:textSize="@dimen/text_size_medium"
	        android:textStyle="bold"
	        android:padding="5dp"
	        android:text="@string/strmorecategories"
	        android:textIsSelectable="false" />
		<View 
		    android:layout_width="fill_parent"
		    android:layout_height="2dip"
		    android:background="#000000"
		    />
		        
		
       <!--  <GridView 
			    android:id="@+id/subgridview1"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:numColumns="auto_fit"
			    android:gravity="center"
			    android:columnWidth="100dp"
			    android:stretchMode="columnWidth"   >
   
		</GridView> -->
		
        <GridView 
			    android:id="@+id/subgridview1"
			    android:layout_width="fill_parent"
			    android:layout_height="match_parent"
			    android:numColumns="auto_fit"
			    android:verticalSpacing="6dp"
			    android:horizontalSpacing="6dp"
			    android:gravity="center"
			    android:columnWidth="90dp"
			    android:stretchMode="columnWidth"   >
   
		</GridView>
  
	</LinearLayout>
</LinearLayout>