<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:scrollbars="vertical">
    
  <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
        android:orientation="vertical"
    	android:padding="10dp">

	<EditText 
	    android:id="@+id/messageComment"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:lines="5"
		android:hint="@string/textcomment"
		/>
	
	<LinearLayout
	    style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
        android:orientation="horizontal"
    	android:padding="7dp">
	
		<Button
		    style="?android:attr/buttonBarButtonStyle"
		    android:id="@+id/btSaveComment" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/save" />
		<Button
		    style="?android:attr/buttonBarButtonStyle"
		    android:id="@+id/btCancelComment" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/cancel" />
	
	</LinearLayout>
	 
	</LinearLayout>
</ScrollView>
