<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <!-- First Ligne -->
        <ImageView
            android:id="@+id/hotel_details_img"
            android:layout_width="fill_parent"
            android:layout_height="200dip"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />
        
    <View style="@style/DividerBold" />

    <!-- Second Ligne with the Hotel name in Bold-->

        <TextView
            android:id="@+id/hotel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#ff11ad3a"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/hotel_name"
            />

	<View style="@style/Divider" />
    <!-- Third Ligne with two horizontal view-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1" >
       
        <ListView
            android:id="@+id/list_details_hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <ImageButton
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/map_background"
            android:text="@string/title_map"
            android:scaleType="centerCrop"
            android:id="@+id/btn_maphotel"
            android:contentDescription="@string/title_map" />
        
    </LinearLayout>
    
    <View style="@style/DividerBold" />
    <!-- Fourth Ligne with the Hotel name in Bold-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="vertical" >
        <ListView
            android:id="@+id/list_courtier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
</LinearLayout>